--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -8,6 +8,36 @@
         <title>Reservia</title>
     </head>
     <body>
-
+        <header>
+            <a href="#" title="logo">
+                <img src="assets/images/ohmyfood@2x.svg" alt="logo reservia" width="392" height="68" srcset="assets/images/ohmyfood.png"/>
+            </a>
+        </header>
+        <img class="resto__photo" src="assets\images\le_delices_des_sens.jpg" alt="photo du restaurant"/>
+        <section class="menuMaker">
+            <h1 class="menuMaker__titre">À la française</h1>
+            <i class="far fa-heart resto__fav"></i>
+            <h2 class="menuMaker__partie">Entrées</h2>
+            <ul class="menuMaker__liste">
+                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+            </ul>
+            <h2 class="menuMaker__partie">Plats</h2>
+            <ul class="menuMaker__liste">
+                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+            </ul>
+            <h2 class="menuMaker__partie">desserts</h2>
+            <ul class="menuMaker__liste">
+                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+            </ul>
+            <button class="menuMaker__valider" type="button">
+                Commander
+            </button>
+        </section>
     </body>
 </html>
