--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <header>
-            <a href="#" title="logo">
+            <a href="OhMyFood.html" title="acceuil">
+                <i class="fas fa-arrow-left"></i>
                 <img src="assets/images/ohmyfood@2x.svg" alt="logo reservia" width="392" height="68" srcset="assets/images/ohmyfood.png"/>
             </a>
         </header>
@@ -19,21 +20,39 @@
             <i class="far fa-heart resto__fav"></i>
             <h2 class="menuMaker__partie">Entrées</h2>
             <ul class="menuMaker__liste">
-                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
-                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
-                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+                <li class="assiette">
+                    <a href="#" title="">Tartare de poulpe acidulé<i class="fas fa-check-circle"></i></a>
+                </li>
+                <li class="assiette">
+                    <a href="#" title="">Velouté de légumes d'antan<i class="fas fa-check-circle"></i></a>
+                </li>
+                <li class="assiette">
+                    <a href="#" title="">Soupe à l'oignon<i class="fas fa-check-circle"></i></a>
+                </li>
             </ul>
             <h2 class="menuMaker__partie">Plats</h2>
             <ul class="menuMaker__liste">
-                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
-                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
-                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+                <li class="assiette">
+                    <a href="#" title="">Coquilles Saint-Jacques<i class="fas fa-check-circle"></i></a>
+                </li>
+                <li class="assiette">
+                    <a href="#" title="">Magret de canard<i class="fas fa-check-circle"></i></a>
+                </li>
+                <li class="assiette">
+                    <a href="#" title="">Pigeonneau d'Ile-et-Vilaine<i class="fas fa-check-circle"></i></a>
+                </li>
             </ul>
             <h2 class="menuMaker__partie">desserts</h2>
             <ul class="menuMaker__liste">
-                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
-                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
-                <li class="assiette"><a href="#" title=""><i class="fas fa-check-circle"></i></a></li>
+                <li class="assiette">
+                    <a href="#" title="">Pétales de violettes glacées<i class="fas fa-check-circle"></i></a>
+                </li>
+                <li class="assiette">
+                    <a href="#" title="">Fondant au chocolat<i class="fas fa-check-circle"></i></a>
+                </li>
+                <li class="assiette">
+                    <a href="#" title="">Millefeuille croustillant<i class="fas fa-check-circle"></i></a>
+                </li>
             </ul>
             <button class="menuMaker__valider" type="button">
                 Commander
