--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>OhMyFood</title>
     </head>
     <body>
-        <header>
+        <header class="header">
             <a href="#" title="logo">
                 <img src="assets/images/ohmyfood.png" alt="logo OhMyFood" width="392" height="68" srcset="assets/images/ohmyfood@2x.svg"/>
             </a>
