--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -5,16 +5,18 @@
         <link href="assets/css/style.css" rel="stylesheet"/>
         <link href="assets/font/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Reservia</title>
+        <title>OhMyFood</title>
     </head>
     <body>
-        <header>
+        <header class="header header--resto">
             <a href="index.html" title="acceuil">
                 <i class="fas fa-arrow-left"></i>
                 <img srcset="assets/images/ohmyfood@2x.svg" alt="logo reservia" width="392" height="68" src="assets/images/ohmyfood.png"/>
             </a>
         </header>
-        <img src="assets\images\a_la_francaise.jpg" alt="photo du restaurant"/>
+        <div class="top">
+            <img class="top__photo" src="assets\images\a_la_francaise.jpg" alt="photo du restaurant"/>
+        </div>
         <section class="menuMaker">
             <h1 class="menuMaker__titre">À la française</h1>
             <i class="far fa-heart"></i>
@@ -42,7 +44,7 @@
                     <a href="#" title="">Pigeonneau d'Ile-et-Vilaine<i class="fas fa-check-circle"></i></a>
                 </li>
             </ul>
-            <h2 class="menuMaker__partie">desserts</h2>
+            <h2 class="menuMaker__partie">Desserts</h2>
             <ul class="menuMaker__liste">
                 <li class="assiette">
                     <a href="#" title="">Pétales de violettes glacées<i class="fas fa-check-circle"></i></a>
