--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -5,10 +5,10 @@
         <link href="assets/css/style.css" rel="stylesheet"/>
         <link href="assets/font/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Reservia</title>
+        <title>OhMyFood</title>
     </head>
     <body>
-        <header>
+        <header class="header--resto">
             <a href="index.html" title="acceuil">
                 <i class="fas fa-arrow-left"></i>
                 <img srcset="assets/images/ohmyfood@2x.svg" alt="logo reservia" width="392" height="68" src="assets/images/ohmyfood.png"/>
@@ -42,7 +42,7 @@
                     <a href="#" title=""><i class="fas fa-check-circle"></i></a>
                 </li>
             </ul>
-            <h2 class="menuMaker__partie">desserts</h2>
+            <h2 class="menuMaker__partie">Desserts</h2>
             <ul class="menuMaker__liste">
                 <li class="assiette">
                     <a href="#" title=""><i class="fas fa-check-circle"></i></a>
