--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head lang="fr">
         <meta charset="UTF-8"/>
         <link href="assets/css/style.css" rel="stylesheet"/>
         <link href="assets/font/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>OhMyFood</title>
+        <title>OhMyFood - À la française</title>
     </head>
     <body>
         <header class="header header--resto">
