--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -5,7 +5,7 @@
         <link href="assets/css/style.css" rel="stylesheet"/>
         <link href="assets/font/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>OhMyFood</title>
+        <title>OhMyFood - La note enchantée</title>
     </head>
     <body>
         <header class="header header--resto">
