--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title>OhMyFood - acceuil</title>
     </head>
     <body>
+        <div class="spinner">            
+            <i class="fas fa-circle-notch spinner__icon"></i>
+        </div>
         <header class="header">
             <a href="#" title="logo">
                 <img src="assets/images/ohmyfood.png" alt="logo OhMyFood" width="392" height="68" srcset="assets/images/ohmyfood@2x.svg"/>
@@ -53,6 +56,7 @@
             <ul class="restaurants__liste">
                 <li class="resto">
                     <a href="la_palette_du_gout.html" title="La palette du goût">
+                        <div class="resto__new">Nouveau</div>
                         <img class="resto__photo" src="assets/images/la_palette_du_gout.jpg" alt="photo du restaurant" width="900" height="600">
                         <div class="resto__infos">
                             <h3 class="resto__nom">La palette du goût</h3>
@@ -63,6 +67,7 @@
                 </li>
                 <li class="resto">
                     <a href="la_note_enchantee.html" title="La note enchantée">
+                        <div class="resto__new">Nouveau</div>
                         <img class="resto__photo" src="assets/images/la_note_enchantee.jpg" alt="photo du restaurant" width="900" height="1125">
                         <div class="resto__infos">
                             <h3 class="resto__nom">La note enchantée</h3>
@@ -108,7 +113,7 @@
                 <li class="footer__li"><a class="footer__lien" href="#" title="Proposer un restaurant"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
                 <li class="footer__li"><a class="footer__lien" href="#" title="Devenir partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
                 <li class="footer__li"><a class="footer__lien" href="#" title="Mentions légales">Mentions légales</a></li>
-                <li class="footer__li"><a class="footer__lien" href="#" title="Contact">Contact</a></li>
+                <li class="footer__li"><a class="footer__lien" href="mailto:gabrielmamillon@gmail.com" title="Contact">Contact</a></li>
             </ul>
         </footer>
     </body>
