--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -167,7 +167,7 @@
                 <li class="footer__li"><a class="footer__lien" href="#" title="Proposer un restaurant"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
                 <li class="footer__li"><a class="footer__lien" href="#" title="Devenir partenaire"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
                 <li class="footer__li"><a class="footer__lien" href="#" title="Mentions légales">Mentions légales</a></li>
-                <li class="footer__li"><a class="footer__lien" href="#" title="Contact">Contact</a></li>
+                <li class="footer__li"><a class="footer__lien" href="mailto:gabrielmamillon@gmail.com" title="Contact">Contact</a></li>
             </ul>
         </footer>
     </body>
